welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
extrema:3: error: type mismatch;
 found   : Array[Int]
 required: Int
  for(a<-1 to nums length-1){
              ^extrema:9: error: type mismatch;
 found   : Array[Int]
 required: Int
  for(a<-1 to nums length-1){
              ^